.manifest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overtype-service
  namespace: personal
  labels:
    app: overtype
spec:
  selector:
    app: overtype
  ports:
    - port: 8080
      name: overtype-service
