.manifest/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overtype-ingress
  namespace: personal
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: overtype.weeb.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overtype-service
                port:
                  number: 8080
